fix the alignment

--- a/wdd130/final-project/styles/main-style.css
+++ b/wdd130/final-project/styles/main-style.css
@@ -810,6 +810,9 @@ div.tag:hover {
     padding-top: 0;
     margin: 30px auto;
 }
+.fitter h2 {
+    text-align: left;
+}
 .fitter > p {
     font-family: var(--heading-font);
 }
